@@ -65,7 +65,7 @@ WINDOWS_EXPORTER_VERSION_I386=0.24.0
 WINDOWS_EXPORTER_FILE_I386=windows_exporter-$(WINDOWS_EXPORTER_VERSION_I386)
 WINDOWS_EXPORTER_URL_I386=https://github.com/prometheus-community/windows_exporter/releases/download/v$(WINDOWS_EXPORTER_VERSION_I386)/
 
-WINDOWS_EXPORTER_VERSION=0.25.1
+WINDOWS_EXPORTER_VERSION=0.26.0
 WINDOWS_EXPORTER_FILE=windows_exporter-$(WINDOWS_EXPORTER_VERSION)
 WINDOWS_EXPORTER_URL=https://github.com/prometheus-community/windows_exporter/releases/download/v$(WINDOWS_EXPORTER_VERSION)/
 
@@ -399,7 +399,9 @@ windist: | dist
 	test -f windist/windows_exporter-386.exe   || curl -s -L -o windist/windows_exporter-386.exe   $(WINDOWS_EXPORTER_URL_I386)/$(WINDOWS_EXPORTER_FILE_I386)-386.exe
 	test -f windist/windows_exporter-amd64.exe || curl -s -L -o windist/windows_exporter-amd64.exe $(WINDOWS_EXPORTER_URL)/$(WINDOWS_EXPORTER_FILE)-amd64.exe
 	test -f windist/windows_exporter-arm64.exe || curl -s -L -o windist/windows_exporter-arm64.exe $(WINDOWS_EXPORTER_URL)/$(WINDOWS_EXPORTER_FILE)-arm64.exe
-	cd windist && shasum --ignore-missing -c ../packaging/sha256sums.txt
+	grep windows_exporter packaging/sha256sums.txt > windist/sha256sums_windows_exporter.txt
+	cd windist && shasum -c sha256sums_windows_exporter.txt
+	rm -f windist/sha256sums_windows_exporter.txt
 
 	$(SED) \
 		-e 's/\/etc\/snclient/${exe-path}/g' \
