@@ -1,6 +1,6 @@
 77628892cd8b98afcf3c0012480d6a64f2d33286054bd4527102d558f3ec8641  windows_exporter-386.exe
-ed0c5c747a965db2066ad5f37492b9eedb81f1299e94c534c11b1eb6bea3fa73  windows_exporter-amd64.exe
-4608137ca21a9f3580233f8fba205936d03ff497423c92c02a66db8de52ef527  windows_exporter-arm64.exe
+03bf2ba6ba211f83fb1a5070628832d013a9f364e74f9f19bb6443a0cd915479  windows_exporter-amd64.exe
+54e8cb6725fbdffc53c6ab3063644c96da2f2d1e4e6bf4b3145415f41b418497  windows_exporter-arm64.exe
 97ad998fe48904a8b085f2c5adc6a6eed85389f5fc298a6d2e94ee2e73cf1728  node_exporter-1.8.2.darwin-amd64.tar.gz
 1b50711d389116d0b6d414240e06fbedfc6bbec6a710fef16771c113a1f7e83c  node_exporter-1.8.2.darwin-arm64.tar.gz
 293ab667ef78eb38915ff5ef019093fb15c7887f072ea70656083d1a17d61858  node_exporter-1.8.2.linux-386.tar.gz
